# group-theory

./: .gitignore  README.md  pyproject.toml
group_theory/: alternating.ipynb  involution.ipynb  symmetric.ipynb
