[tool.poetry]
name = "group-theory"
version = "0.1.0"
description = ""
authors = ["easai <aksarih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sympy = "^1.14.0"
jupyter = "^1.1.1"
ipykernel = "^6.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
